--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,9 @@ sgqlc = "^15.0"
 [tool.poetry.dev-dependencies]
 black = "^22.1.0"
 pre-commit = "^2.17.0"
+isort = "^5.10.1"
+mypy = "^0.931"
+flake8 = "^4.0.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
