--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ pre-commit = "^2.17.0"
 isort = "^5.10.1"
 mypy = "^0.931"
 flake8 = "^4.0.1"
+pytest = "^7.0.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
