Add click dependency

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ license = "MIT"
 [tool.poetry.dependencies]
 python = "^3.8"
 sgqlc = "^15.0"
+click = "^8.0.3"
 
 [tool.poetry.dev-dependencies]
 black = "^22.1.0"
