--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -51,5 +51,4 @@ repos:
   - id: no-commit-to-branch
     stages: [commit,push]
     args:
-    - --branch=develop
-    - --branch=master
+    - --branch=main
