--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Run and Test
+name: Build
 
 on:
   pull_request:
@@ -16,6 +16,9 @@ jobs:
       with:
         python-version: "3.9"
     - name: Install dependencies
-      run: poetry install
-    - name: Test and Lint
+      run: |
+        python -m pip install --upgrade pip
+        pip install poetry
+        make install_dev
+    - name: Run tests
       run: make test
