--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.8"
 sgqlc = "^15.0"
 click = "^8.0.3"
 requests = "^2.27.1"
+types-requests = "^2.27.13"
 
 [tool.poetry.dev-dependencies]
 black = "^22.1.0"
