--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ sgqlc = "^15.0"
 click = "^8.0.3"
 requests = "^2.27.1"
 types-requests = "^2.27.13"
+pytest-dependency = "^0.5.1"
 
 [tool.poetry.dev-dependencies]
 black = "^22.1.0"
