--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,8 +20,10 @@ jobs:
         python -m pip install --upgrade pip
         pip install poetry
         make install_dev
-    - name: Run tests
-      run: make test
+    - name: Run tests and coverage
+      run: make test_cov
       env:
         DBT_CLOUD_SERVICE_TOKEN: ${{ secrets.DBT_CLOUD_SERVICE_TOKEN }}
         DBT_CLOUD_API_KEY: ${{ secrets.DBT_CLOUD_API_KEY }}
+    - name: Upload coverage to Codecov
+      uses: codecov/codecov-action@v2
