--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,3 +27,5 @@ jobs:
         DBT_CLOUD_API_KEY: ${{ secrets.DBT_CLOUD_API_KEY }}
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v2
+      with:
+        token: ${{ secrets.CODECOV_TOKEN }}
