Add secrets to env

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,6 +25,8 @@ jobs:
       env:
         DBT_CLOUD_SERVICE_TOKEN: ${{ secrets.DBT_CLOUD_SERVICE_TOKEN }}
         DBT_CLOUD_API_KEY: ${{ secrets.DBT_CLOUD_API_KEY }}
+        DBT_CLOUD_ACCOUNT_NAME: ${{ secrets.DBT_CLOUD_ACCOUNT_NAME }}
+        DBT_CLOUD_PROJECT_NAME: ${{ secrets.DBT_CLOUD_PROJECT_NAME }}
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v2
       with:
