--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,10 +9,10 @@ license = "MIT"
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.7"
+python = "^3.8"
 sgqlc = "^15.0"
 requests = "^2.27.1"
-typer = "^0.4.0"
+typer = {extras = ["all"], version = "^0.6.1"}
 
 [tool.poetry.dev-dependencies]
 black = "^22.1.0"
