--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -10,5 +10,5 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: 3.x
-      - run: pip install mkdocs-material mkdocstrings[python]
+      - run: pip install mkdocs-material "mkdocstrings[python]" mike
       - run: mkdocs gh-deploy --force
