--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -40,6 +40,8 @@ theme:
 
 # Extras
 extra:
+  version:
+    provider: mike
   social:
     - icon: fontawesome/brands/github-alt
       link: https://github.com/dpguthrie
