--- a/examples/github_autoscaling_ci.yml
+++ b/examples/github_autoscaling_ci.yml
@@ -26,6 +26,6 @@ jobs:
           SO="dbt_cloud_pr_"$JOB_ID"_"$PULL_REQUEST_ID
           run=$(dbtc trigger-autoscaling-ci-job \
             --job-id=$JOB_ID \
-            --payload='{"cause": "Autoscaling Slim CI!","git_sha":"'$GIT_SHA'","schema_override":"'$SO'","github_pull_request_id":"'$PULL_REQUEST_ID'"}' \
+            --payload='{"cause": "Autoscaling Slim CI!","git_sha":"'$GIT_SHA'","schema_override":"'$SO'","github_pull_request_id":"$PULL_REQUEST_ID"}' \
             --pull-request-id=$PULL_REQUEST_ID \
             --no-should-poll)
