--- a/examples/github_autoscaling_ci.yml
+++ b/examples/github_autoscaling_ci.yml
@@ -3,6 +3,11 @@ on:
   pull_request:
     branches:
       - main
+    types:
+      - opened
+      - reopened
+      - synchronize
+      - ready_for_review
 
 jobs:
   autoscaling:
