--- a/examples/github_autoscaling_ci.yml
+++ b/examples/github_autoscaling_ci.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   autoscaling:
-    if: ! github.event.pull_request.draft
+    if: github.event.pull_request.draft == false
     runs-on: ubuntu-latest
     env:
       DBT_CLOUD_SERVICE_TOKEN: ${{ secrets.DBT_CLOUD_SERVICE_TOKEN }}
