--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ python = "^3.8"
 sgqlc = "^15.0"
 requests = "^2.27.1"
 typer = {extras = ["all"], version = "^0.6.1"}
+rudder-sdk-python = "^1.0.6"
 
 [tool.poetry.dev-dependencies]
 black = "^22.1.0"
