--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ sgqlc = "^15.0"
 requests = "^2.27.1"
 typer = {extras = ["all"], version = "^0.6.1"}
 rudder-sdk-python = "^1.0.6"
+pydantic = "^1.10.5"
 
 [tool.poetry.dev-dependencies]
 black = "^22.1.0"
