--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ python = "^3.8"
 requests = "^2.27.1"
 typer = {extras = ["all"], version = "^0.9.0"}
 rudder-sdk-python = "^1.0.6"
-pydantic = ">=2.0,<3.0"
+pydantic = "^2.5.3"
 
 [tool.poetry.dev-dependencies]
 black = "^22.1.0"
