Create command groups for the CLI

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -89,6 +89,10 @@ markdown_extensions:
   - pymdownx.details
   - pymdownx.tabbed:
       alternate_style: true
+  - attr_list
+  - pymdownx.emoji:
+      emoji_index: !!python/name:material.extensions.emoji.twemoji
+      emoji_generator: !!python/name:material.extensions.emoji.to_svg
 
 # Navigation
 nav:
@@ -110,5 +114,5 @@ plugins:
       handlers:
         python:
           options:
-            show_source: true
+            show_source: false
             show_root_toc_entry: false
