--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ requests = "^2.27.1"
 typer = {extras = ["all"], version = "^0.9.0"}
 rudder-sdk-python = "^1.0.6"
 pydantic = "^2.5.3"
+pyarrow = "^15.0.0"
+pandas = "<2.2.0"
 
 [tool.poetry.dev-dependencies]
 black = "^22.1.0"
