--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,22 +4,16 @@ default_language_version:
 repos:
 - repo: local
   hooks:
-  - id: isort
+  - id: ruff
     stages: [commit,push]
-    name: isort
-    entry: poetry run isort -rc
-    language: system
-    types: [python]
-  - id: black
-    stages: [commit,push]
-    name: black
-    entry: poetry run black -S .
+    name: ruff
+    entry: uv run ruff check
     language: system
     types: [python]
   - id: mypy
     stages: [commit,push]
     name: mypy
-    entry: poetry run mypy --ignore-missing-imports --follow-imports=skip --strict-optional
+    entry: uv run mypy --ignore-missing-imports --follow-imports=skip --strict-optional
     language: system
     types: [python]
 - repo: https://github.com/pre-commit/pre-commit-hooks
