--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,39 +1,54 @@
-[tool.poetry]
+[project]
 name = "dbtc"
 version = "0.11.5"
 description = "An unaffiliated python wrapper for dbt Cloud APIs"
-authors = ["Doug Guthrie <douglas.p.guthrie@gmail.com>"]
+authors = [
+    {name = "Doug Guthrie", email = "douglas.p.guthrie@gmail.com"},
+]
 documentation = "https://dbtc.dpguthrie.com"
-keywords=["dbt", "requests", "API", "dbt Cloud"]
+keywords = ["dbt", "requests", "API", "dbt Cloud"]
 license = "MIT"
 readme = "README.md"
+requires-python = ">=3.8"
 
-[tool.poetry.dependencies]
-python = "^3.8"
-requests = "^2.27.1"
-typer = {extras = ["all"], version = "^0.9.0"}
-rudder-sdk-python = "^1.0.6"
-pydantic = "^2.5.3"
-pyarrow = "^15.0.0"
-pandas = "<2.2.0"
+dependencies = [
+    "requests>=2.27.1",
+    "typer[all]>=0.9.0",
+    "pydantic>=2.5.3",
+    "pyarrow>=15.0.0",
+    "pandas<2.2.0",
+]
 
-[tool.poetry.dev-dependencies]
-black = "^22.1.0"
-pre-commit = "^2.17.0"
-isort = "^5.10.1"
-mypy = "^0.931"
-flake8 = "^4.0.1"
-pytest = "^7.0.1"
-pytest-dependency = "^0.5.1"
-types-requests = "^2.27.13"
-ipython = "^8.2.0"
-coverage = "^6.3.2"
-pytest-cov = "^3.0.0"
-mkdocs-material = "^9.5.2"
-
-[tool.poetry.scripts]
+[project.scripts]
 dbtc = "dbtc.cli:main"
 
+[tool.uv]
+dev-dependencies = [
+    "pre-commit>=2.17.0",
+    "mypy>=0.931",
+    "pytest>=7.0.1",
+    "pytest-dependency>=0.5.1",
+    "types-requests>=2.27.13",
+    "ipython>=8.2.0",
+    "coverage>=6.3.2",
+    "pytest-cov>=3.0.0",
+    "mkdocs-material>=9.5.2",
+    "ruff>=0.6.8",
+]
+
 [build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+line-length = 88
+indent-width = 4
+
+[tool.ruff.format]
+quote-style = "double"
+indent-style = "space"
+skip-magic-trailing-comma = false
+line-ending = "auto"
+docstring-code-format = false
+
+[tool.ruff.lint.per-file-ignores]
+"__init__.py" = ["E402"]
