--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,20 +2,11 @@ default_stages: [push]
 default_language_version:
   python: python3.9
 repos:
-- repo: local
+- repo: https://github.com/astral-sh/ruff-pre-commit
+  rev: v0.6.3
   hooks:
-  - id: ruff
-    stages: [commit,push]
-    name: ruff
-    entry: uv run ruff check
-    language: system
-    types: [python]
-  - id: mypy
-    stages: [commit,push]
-    name: mypy
-    entry: uv run mypy --ignore-missing-imports --follow-imports=skip --strict-optional
-    language: system
-    types: [python]
+    - id: ruff
+      args: [ --show-fixes ]
 - repo: https://github.com/pre-commit/pre-commit-hooks
   rev: v2.1.0
   hooks:
