--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,10 +3,13 @@ default_language_version:
   python: python3.9
 repos:
 - repo: https://github.com/astral-sh/ruff-pre-commit
-  rev: v0.6.3
+  # Ruff version.
+  rev: v0.6.8
   hooks:
+    # Run the linter.
     - id: ruff
-      args: [ --fix --show-fixes ]
+      args: [ --fix ]
+    # Run the formatter.
     - id: ruff-format
 - repo: https://github.com/pre-commit/pre-commit-hooks
   rev: v2.1.0
