--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,16 +16,19 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up Python 3.9
-      uses: actions/setup-python@v3
+    - uses: actions/checkout@v4
+
+    - name: Install uv
+      uses: astral-sh/setup-uv@v3
+
+    - name: "Set up Python"
+      uses: actions/setup-python@v5
       with:
-        python-version: "3.9"
+        python-version-file: ".python-version"
+
     - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install poetry
-        make install_dev
+      run: make install_dev
+
     - name: Run tests and coverage
       run: make test_cov
       env:
@@ -33,6 +36,7 @@ jobs:
         DBT_CLOUD_API_KEY: ${{ secrets.DBT_CLOUD_API_KEY }}
         DBT_CLOUD_ACCOUNT_NAME: ${{ secrets.DBT_CLOUD_ACCOUNT_NAME }}
         DBT_CLOUD_PROJECT_NAME: ${{ secrets.DBT_CLOUD_PROJECT_NAME }}
+
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v2
       with:
